use babel to import directories

--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   },
   "workspaces": [
     "source-data"
-  ]
+  ],
+  "dependencies": {
+    "@babel/cli": "^7.23.9",
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9"
+  }
 }
