--- a/assistant/package.json
+++ b/assistant/package.json
@@ -1,10 +1,25 @@
 {
-  "name": "assistant",
+  "name": "@govgpt/assistant",
   "version": "1.0.0",
-  "description": "This service feeds govGPT's source-data into AI models to power the application's knowledge.",
+  "description": "This service feeds govGPT's assistant models to power the application's knowledge.",
   "main": "main.js",
   "repository": "https://github.com/abrantesarthur/govgpt",
   "author": "Arthur Abrantes",
   "license": "GPL-3.0-or-later",
-  "private": false
+  "private": false,
+  "scripts": {
+    "build": "tsc --build",
+    "clean": "tsc --build --clean",
+    "start": "yarn build && node ../build/@govgpt/assistant/main.js",
+    "dev": "ts-node --transpile-only ./src/main.ts"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.1",
+    "openai": "^4.27.0",
+    "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.16",
+    "ts-node": "^10.9.2"
+  }
 }
